@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-12-09T00:46:37Z",
+  "timestamp" : "2025-12-10T00:48:01Z",
   "count_outdated" : 286,
   "uniques_outdated" : 252,
-  "count" : 289,
-  "uniques" : 255,
+  "count" : 290,
+  "uniques" : 256,
   "clones" : [
     {
       "timestamp": "2025-11-27T00:00:00Z",
@@ -25,6 +25,15 @@
     },
     {
       "timestamp": "2025-12-08T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-12-09T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
