@@ -1,3 +1,12 @@
+2025-12-10T00:48:01Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20083409950 # 834
+* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-10
+* notice: last 14d: unq all: 4 4
+* notice: prev accum: outdated-unq outdated-all / unq all: 252 286 / 255 289
+* notice: next accum: outdated-unq outdated-all / unq all: 252 286 / 256 290
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-12-09]
+
 2025-12-09T00:46:37Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20047902106 # 833
 * notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-09
